[package]
name = "sop"
version = "2.2.7"
edition = "2021"
description = "Rust bindings for Scalable Objects Persistence (SOP)"
license = "MIT"

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }

[build-dependencies]
