[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
    include-package-data = true

[project]
name = "sop-python-beta-3"
version = "3.0.2"
authors = [
    { name="Gerardo Recinto", email="gerardorecinto@yahoo.com" },
]
description = "Scalable Objects Persistence for Python."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "libjsondb_amd64darwin.dylib",
    "libjsondb_amd64darwin.h",
    "libjsondb_arm64darwin.dylib",
    "libjsondb_arm64darwin.h",
    "libjsondb_amd64linux.so",
    "libjsondb_amd64linux.h",
    "libjsondb_arm64linux.so",
    "libjsondb_arm64linux.h",
    "libjsondb_amd64windows.dll",
    "libjsondb_amd64windows.h",
]

# build: python3 -m build
# upload to pypi using twine: python3 -m twine upload dist/*
# project link: https://pypi.org/project/sop-python-beta-3
